Bug 570858 - 'ChromeWorker doesn't exist from browser.xul/overlay js'. r=mrbkap.